Update shellsplit pattern